[gd_scene load_steps=14 format=3 uid="uid://bu62qgilsxetf"]

[ext_resource type="Script" uid="uid://bxwx72gohremh" path="res://Scripts/Inimigos/Larva.gd" id="1_upplv"]
[ext_resource type="Texture2D" uid="uid://b0g3aehy8v827" path="res://Sprites/Inimigos/Larva/scorpion_FRAME01.png" id="2_e4ug0"]
[ext_resource type="Texture2D" uid="uid://cl6s3a1na1sf7" path="res://Sprites/Inimigos/Larva/scorpion_FRAME02.png" id="3_ehdjk"]
[ext_resource type="Texture2D" uid="uid://cq8g6bvidl78b" path="res://Sprites/Inimigos/Larva/scorpion_FRAME03.png" id="4_e1mmi"]
[ext_resource type="Script" uid="uid://hsdutxxttrp3" path="res://Scripts/Componentes/Vida.gd" id="5_6imq8"]
[ext_resource type="PackedScene" uid="uid://va5pjd6vuuo2" path="res://Objetos/Funcionalidade/CompHurtBox.tscn" id="6_e4ug0"]
[ext_resource type="PackedScene" uid="uid://pc4mgv2nv8af" path="res://Objetos/Funcionalidade/CompHitBox.tscn" id="7_dsbcb"]
[ext_resource type="AudioStream" uid="uid://dhgsnus0fna7q" path="res://Audio/SFX/SOM TESTE.mp3" id="8_yecop"]
[ext_resource type="Script" uid="uid://b2ls33ys55oyt" path="res://Scripts/Componentes/OtimizadorSprite.gd" id="9_e4ug0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ntg74"]
size = Vector2(223, 83)

[sub_resource type="SpriteFrames" id="SpriteFrames_tkh53"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e4ug0")
}, {
"duration": 1.0,
"texture": ExtResource("3_ehdjk")
}, {
"duration": 1.0,
"texture": ExtResource("4_e1mmi")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gx8x6"]
radius = 55.5
height = 234.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ujy2f"]
radius = 55.0
height = 140.0

[node name="Larva" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_upplv")
velocidade = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, -41.5)
shape = SubResource("RectangleShape2D_ntg74")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, -89)
scale = Vector2(0.535156, 0.535156)
sprite_frames = SubResource("SpriteFrames_tkh53")
autoplay = "default"
frame_progress = 0.043297

[node name="Vida" type="Node" parent="."]
script = ExtResource("5_6imq8")
vida_max = 10
metadata/_custom_type_script = "uid://hsdutxxttrp3"

[node name="HurtBox" parent="." node_paths=PackedStringArray("comp_vida", "parent") instance=ExtResource("6_e4ug0")]
comp_vida = NodePath("../Vida")
distancia_knockback = 5.0
tempo_knockback = 0.2
parent = NodePath("..")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, -37)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_gx8x6")
debug_color = Color(0.99999, 0, 0.0935918, 0.42)

[node name="HitBox" parent="." node_paths=PackedStringArray("ignore") instance=ExtResource("7_dsbcb")]
unique_name_in_owner = true
ignore = NodePath("../HurtBox")
sfx = ExtResource("8_yecop")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-57, -37)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_ujy2f")
debug_color = Color(0.807155, 0.414602, 3.85046e-07, 0.42)

[node name="RayDireita" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(120, -60)
target_position = Vector2(20, 0)

[node name="RayVazioDireita" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(120, -24)

[node name="RayEsquerda" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-120, -60)
target_position = Vector2(-20, 0)

[node name="RayVazioEsquerda" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-120, -24)

[node name="SpawnMoeda" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -43)

[node name="OtimizadorSprite" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0, -42)
scale = Vector2(11.7, 6)
script = ExtResource("9_e4ug0")
metadata/_custom_type_script = "uid://b2ls33ys55oyt"
